v1.6.56 se agrega creaReporteDiarioMovil para la app movil
